doc/k8s/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domo-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      name: demo-deployment
  
  template:
    metadata:
      labels:
        name: demo-deployment
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - name: www
          containerPort: 80
