doc/k8s/yaml/persistentVolume.yaml

apiVersion: v1
kind: Pod
metadata:
  name: demo-persistent-volume-claim-pod
spec:
  volumes:
  - name: pvc
    persistentVolumeClaim:
      claimName: demo-persistent-volume-claim

  containers:
  - image: nginx
    name: demo-persistent-volume-claim-pod

    ports:
    - containerPort: 80

    volumeMounts:
    - name: pvc
      mountPath: /tmp
