doc/k8s/yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
spec:
  containers:
    - image: nginx:latest
      name: nginx
      imagePullPolicy: IfNotPresent
      command:
        - /bin/echo
      args:
        - "$(sex)"
