doc/k8s/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domo-service
spec:
  selector:
    name: demo-deployment  #这里需要与pod中的selector.name相同，这里是去匹配pod的

  type: NodePort

  ports:            
  - port: 80          #暴露pod的port, pod的prot:容器的prot
    targetPort: 80
    protocol: TCP
