doc/k8s/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingrerss

spec:
  ingressClassName: demo-ingress-class

  rules:
  - host: ngx.test
    http:
      paths:
      - path: /
        pathType: Exact  #Exact精准匹配   Prefix前缀匹配   
        backend:
          service:
            name: demo-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: demo-ingress-class
spec:
  controller: nginx.org/ingress-controller
